k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: FS
spec:
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-service
  namespace: FS
subsets:
  - addresses:
      - ip: 172.16.8.20
    ports:
      - port: 3306
