k8s/springboot.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: FS
spec:
  selector:
    app: springboot
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
  namespace: FS
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: kyongyeolin/todo-springboot:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
